@@ -1,3 +1,8 @@
+2011-05-20  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/49079
+	* gcc.dg/torture/pr49079.c: New testcase.
+
 2011-05-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/49073
